Version 9, Changement dans le BinController pour qu'il soit parfait
