# public/swagger/swagger.json
@@ -6,7 +6,7 @@
         "license": {
             "name": "LinkeBin"
         },
-        "version": "4.0.0"
+        "version": "4.1.0"
     },
     "servers": [
         {
@@ -24,15 +24,19 @@
                 "operationId": "App\\Controller\\BinController::index",
                 "responses": {
                     "200": {
-                        "description": "Display index of bin",
-                        "headers": {
-                            "x-next": {
-                                "description": "A link to the next page of responses",
-                                "schema": {
-                                    "type": "string"
-                                }
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": "Welcome to your new controller!"
                             }
                         }
+                    },
+                    "403": {
+                        "description": "Access denied"
+                    },
+                    "404": {
+                        "description": "Not found"
                     }
                 }
             }
@@ -44,19 +48,49 @@
                 ],
                 "summary": "Add all bins",
                 "operationId": "createBins",
+                "parameters": [
+                    {
+                        "name": "ID",
+                        "in": "query",
+                        "description": "ID of bin",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "Url",
+                        "in": "header",
+                        "description": "Url of api",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Success",
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/bins"
-                                }
+                                    "$ref": "#/components/schemas/bin"
+                                },
+                                "example": "\r\n     *         id: 0,\r\n     *         coords: 92.7667 87.4376,\r\n     *         city: Toulouse,\r\n     *         adress: 402 rue des tilleuls,\r\n     *         is_enable: true,\r\n     *         created_at: 2020-01-20T09:47:53.086Z,\r\n     *         updated_at: 2020-01-20T09:47:53.086Z,\r\n     *         user_bin: 42,\r\n     *         bin_historics: 50,\r\n     *         cityBins: 64"
                             }
                         }
                     },
-                    "404": {
+                    "403": {
                         "description": "Access denied"
+                    },
+                    "404": {
+                        "description": "Url doesn't exist",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": "URL Doesn't Exist"
+                            }
+                        }
                     }
                 }
             }
@@ -114,7 +148,7 @@
     },
     "components": {
         "schemas": {
-            "bins": {
+            "bin": {
                 "required": [
                     "id",
                     "coords",
@@ -133,6 +167,16 @@
                     },
                     "coords": {
                         "type": "integer"
+                    },
+                    "city": {
+                        "type": "string",
+                        "maxLength": 255,
+                        "nullable": true
+                    },
+                    "adress": {
+                        "type": "string",
+                        "maxLength": 255,
+                        "nullable": true
                     },
                     "is_enable": {
                         "type": "boolean",
